--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<div class="slider-item d-flex align-items-center set-bg" data-setbg="img/slider-bg-1.jpg" data-hash="slide-1">
 					<div class="si-text-box">
 						<span>Photography</span>
-						<h2>Naveen Murugan</h2>
+						<h2>Libin Mon Y</h2>
 						<p>The most beautiful things are always hidden,
 							Collecting memories.</p>
 						<a href="blog.html" class="site-btn">Read More</a>
